# pyplay

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bigram.c  markov.py  setup.py  spammodule.c  test.py
